--- a/templates/profile.html
+++ b/templates/profile.html
@@ -42,10 +42,9 @@
                 </div>
 
                 <div class="form-group">
-                    <label>아이디 (변경 불가)</label>
-                    <input type="text" value="{{ user.user_id }}" readonly>
+                    <label>아이디</label>
+                    <input type="text" name="new_id" value="{{ user.user_id }}" required>
                 </div>
-
                 <div class="form-group">
                     <label>닉네임</label>
                     <input type="text" name="nickname" value="{{ user.nickname }}" required>
